--- a/index.html
+++ b/index.html
@@ -1,17 +1,49 @@
-<h1>It's my birthday</h1>   
+<!DOCTYPE html>
+<html lang="ro">
+<head>
+    <meta charset="UTF-8">
+    <title>My website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+<h1>Gabriel Stan Webpage</h1>
+<h3>I'm a New Web Developer</h3>
 <hr />
-</br />
-<h2>On the 7th october </h2>
+<a 
+href="../2.4 Movie Ranking Project/index.html">
+Movie Project
+</a>
+<br />
+<br />
+<br />
+<img src="./assets/images/movie-ranking.png"
+alt="movie ranking" 
+height="300px"
+width="400PX"
+/>
+<BR />
+<A 
+href="../3.4 Birthday Invite Project/index.html"> 
+Birthday invitation
+</A>
+<br />
+<br />
+<br />
+<a href="../3.4 Birthday Invite Project/solution.html" >
+</a>
+<img src="../3.4 Birthday Invite Project/goal.png"
+alt="birthday invitation"
+width="400PX"
+height="400x"/>
 
-<img src="https://img.freepik.com/premium-vector/animated-birthday-cake-icon-with-anniversary-design-vector-illustration_1263357-29468.jpg?w=1480" 
-alt="birthday cake with candles" width="400" height="400" />
-<ul>
-<li>baloons</li>
-<li>money</li>
-<li>drinks</li>
-</ul>
-<br/>
-<br/>
-<br/>
-<h4> Scroll down </h4>
-<a href="https://www.google.be/maps/place/Turnhoutsebaan/@51.2213989,4.4872265,17z/data=!3m1!4b1!4m6!3m5!1s0x47c3f77713d20a6f:0x532eaca34f1f9357!8m2!3d51.2213989!4d4.4898014!16s%2Fg%2F1tv3mvvz?hl=nl&entry=ttu&g_ep=EgoyMDI1MDMwNC4wIKXMDSoASAFQAw%3D%3D"> Here we meet</a> 
+<br />
+<br />
+<br />
+
+<a href="../4.1+Webpages/public/about.html">About me</a> and <a href="../4.1+Webpages/public/contact.html">Contact</a>
+
+<h6> Thank you</h6>
+
+</body>
+
+</html>
